simple-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-chart-deploy
  name: simple-chart-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-chart-deploy
